--- a/smos/test_resources/config/yaml/complete.yaml
+++ b/smos/test_resources/config/yaml/complete.yaml
@@ -1,5 +1,7 @@
 archive-dir: null
 workflow-dir: null
+projects-dir: null
+archived-projects-dir: null
 keys:
   reports:
     next-action:
@@ -360,4 +362,3 @@ keys:
       key: M-<Down>
     - action: propertiesToggleSelected
       key: <tab>
-projects-dir: null
