Set up a skeleton for smos-single

--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,7 @@ packages:
 - smos-report-cursor
 - smos-report-cursor-gen
 - smos-query
+- smos-single
 - smos-convert-org
 - smos-archive
 - smos-docs-site
