Archive learnt to warn if not everything is done in the file

--- a/smos-archive/package.yaml
+++ b/smos-archive/package.yaml
@@ -12,10 +12,12 @@ library:
   ghc-options: -Wall
   dependencies:
     - base
+    - containers
     - mtl
     - optparse-applicative
     - path
     - path-io
+    - smos-data
     - smos-report
     - time
 
