--- a/stack.yaml
+++ b/stack.yaml
@@ -14,7 +14,10 @@ packages:
 - smos-convert-org
 - smos-archive
 - smos-docs-site
+- smos-server
 extra-deps:
+- /home/syd/src/mergeful/mergeful
+- /home/syd/src/mergeful/genvalidity-mergeful
 - git: https://github.com/ixmatus/orgmode-parse
   commit: 1bdfbfe8fb7299724a6f6a122a93b2e96dd839f8
 - thyme-0.3.5.5
