--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ packages:
 - smos-convert-org
 - smos-archive
 - smos-docs-site
+- smos-sync-api
 - smos-sync-server
 - smos-sync-client
 extra-deps:
