Started using the new pretty relative time

--- a/smos/test_resources/golden/delete-node.yaml
+++ b/smos/test_resources/golden/delete-node.yaml
@@ -1,22 +1,22 @@
 before:
-- forest:
-  - forest:
-    - forest:
-      - forest:
+- entry: hello
+  forest:
+  - entry: world
+    forest:
+    - entry: this
+      forest:
+      - entry: is
+        forest:
         - me
-        entry: is
-      entry: this
-    entry: world
-  entry: hello
 commands:
 - forestToggleCollapse
 - forestMoveDown
 - forestDeleteCurrentEntry
 after:
-- forest:
-  - forest:
-    - forest:
+- entry: hello
+  forest:
+  - entry: this
+    forest:
+    - entry: is
+      forest:
       - me
-      entry: is
-    entry: this
-  entry: hello
