--- a/smos-sync-api/package.yaml
+++ b/smos-sync-api/package.yaml
@@ -27,5 +27,9 @@ library:
   - stm
   - text
   - uuid
+  - validity
+  - validity-bytestring
+  - validity-path
+  - validity-uuid
   - wai
   - warp
