--- a/smos-sync-server-gen/package.yaml
+++ b/smos-sync-server-gen/package.yaml
@@ -1,35 +1,34 @@
-name: smos-data-gen
+name: smos-sync-server-gen
 version: '0.0.0.0'
 category: Smos
 author: Tom Sydney Kerckhove
 maintainer: syd@cs-syd.eu
-copyright: ! 'Copyright: (c) 2018-2019 Tom Sydney Kerckhove'
+copyright: ! 'Copyright: (c) 2019 Tom Sydney Kerckhove'
 license: MIT
 homepage: https://github.com/NorfairKing/smos
 
 dependencies:
-- base >=4.9 && <=5
-  
+- base
+
 library:
   source-dirs: src/
   ghc-options: -Wall
-  exposed-modules:
-  - Smos.Data.Gen
   dependencies:
-  - QuickCheck
-  - containers
-  - genvalidity
-  - genvalidity-containers
-  - genvalidity-path
-  - genvalidity-text
-  - genvalidity-time
-  - genvalidity-unordered-containers
-  - smos-data
-  - text
-  - time
+  - hspec
+  - http-client
+  - http-types
+  - mergeful
+  - path
+  - path-io
+  - servant-client
+  - smos-sync-server
+  - stm
+  - uuid
+  - wai
+  - warp
 
 tests:
-  smos-data-test:
+  smos-sync-server-test:
     main: Spec.hs
     source-dirs: test/
     ghc-options:
@@ -39,15 +38,12 @@ tests:
     - -Wall
     dependencies:
     - QuickCheck
-    - aeson
-    - bytestring
+    - genvalidity
     - genvalidity-hspec
     - genvalidity-hspec-aeson
     - hspec
     - path
     - path-io
-    - pretty-show
-    - smos-data
-    - smos-data-gen
-    - text
-    - time
+    - smos-sync-client
+    - smos-sync-client-gen
+
