--- a/stack.yaml
+++ b/stack.yaml
@@ -15,8 +15,11 @@ packages:
 - smos-archive
 - smos-docs-site
 - smos-sync-api
+- smos-sync-api-gen
 - smos-sync-server
+- smos-sync-server-gen
 - smos-sync-client
+- smos-sync-client-gen
 extra-deps:
 - git: https://github.com/NorfairKing/mergeful
   commit: b14dde7a01cb12d7a2eec180c03de135059e36c6
