Started on some integration tests for syncing, they fail

--- a/smos-sync-server-gen/package.yaml
+++ b/smos-sync-server-gen/package.yaml
@@ -14,7 +14,9 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+  - QuickCheck
   - hspec
+  - hspec-core
   - http-client
   - http-types
   - mergeful
