--- a/smos-sync-client-gen/package.yaml
+++ b/smos-sync-client-gen/package.yaml
@@ -34,6 +34,7 @@ tests:
     - genvalidity
     - genvalidity-hspec
     - genvalidity-hspec-aeson
+    - hspec-core
     - hspec
     - mergeful
     - path
