--- a/smos-sync-client/package.yaml
+++ b/smos-sync-client/package.yaml
@@ -24,6 +24,8 @@ library:
   - http-client
   - http-client-tls
   - mergeful
+  - monad-logger
+  - mtl
   - optparse-applicative
   - path
   - path-io
